--- a/app/views/owners/index.erb
+++ b/app/views/owners/index.erb
@@ -1,1 +1,5 @@
-index.erb
+<h1>Owners</h1>
+
+<% @owners.each do |owner| %>
+  <a href="/owners/<%= owner.id %>"><h2><%= owner.name %></h2></a>
+<% end %>
