--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,20 @@
 <h1>Create a new Pet</h1>
 
+<form action="/pets" method="POST">
+  <label>Name:</label>
+  <br></br>
+  <input id="pet_name" type="text" name="pet[name]" value=""></input>
+  <label>Choose and existing owner:</label>
+  <br></br>
+  <% @owners.each do |owner| %>
+    <input id="<%=owner.id%>" type="checkbox" name="pet[owner_id]" value="<%=owner.id%>"> <%= owner.name %> </input>
+  <% end %>
+
+  <label>and/or, create a new owner:</label>
+  <br></br>
+  <label>name:</label>
+    <input id="owner_name" type="text" name="owner[name]"></input>
+    <br></br>
+    <input type="submit" name="submit" value="Create Pet">
+
+</form>
